--- a/06_Shop_Onepage/Views/Product/List.cshtml
+++ b/06_Shop_Onepage/Views/Product/List.cshtml
@@ -33,8 +33,7 @@
                                     <h3>Gói Lập trình 01</h3>
                                 </div>
                                 <div class="price-rate">
-                                    <h3>360.000 đ</h3>
-                                    <h5>Tháng</h5>
+                                    <h3>360.000 đ/Năm</h3>
                                 </div>
                             </div>
                         </div>
@@ -58,7 +57,8 @@
                             </ul>
                         </div>
                         <div class="price-footer">
-                            <a href="/goi-danh-cho-lap-trinh-01-p869" class="price-battn">Đặt hàng <i class="fa fa-angle-right"></i></a>
+                            <a href="javascript:Cart.addProduct(869,'300000','http://media.anpero.com/images/38/22018/12018022523310256.jpg','Gói API dành cho lập trình 01');" class="price-battn">Đặt hàng <i class="fa fa-angle-right"></i></a>
+                            <a href="/goi-api-danh-cho-lap-trinh-01-p869" class="price-battn">Chi tiết <i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -71,8 +71,7 @@
                                     <h3>Gói lập trình 02</h3>
                                 </div>
                                 <div class="price-rate">
-                                    <h3>720.000 đ</h3>
-                                    <h5>Năm</h5>
+                                    <h3>720.000 đ/Năm</h3>
                                 </div>
                             </div>
                         </div>
@@ -103,8 +102,9 @@
                             </ul>
                         </div>
                         <div class="price-footer">
-                            <a href="#" class="price-battn">Đặt hàng <i class="fa fa-angle-right"></i></a>
-                            <a href="#" class="price-battn">Xem thêm <i class="fa fa-angle-right"></i></a>
+                           
+                            <a href="javascript:Cart.addProduct(869,'720000','http://media.anpero.com/images/38/22018/12018022523310256.jpg','Gói API dành cho lập trình 02');" class="price-battn">Đặt hàng <i class="fa fa-angle-right"></i></a>
+                            <a href="/goi-api-danh-cho-lap-trinh-02-p900" class="price-battn">Chi tiết <i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -117,8 +117,8 @@
                                     <h3>Gói tự chủ</h3>
                                 </div>
                                 <div class="price-rate">
-                                    <h3>720.000 đ</h3>
-                                    <h5>/Năm + 5.000.000 công thiết kế</h5>
+                                    <h3>720.000 đ/Năm </h3>
+                                    <h5>+ 5.000.000 công thiết kế</h5>
                                 </div>
                             </div>
                         </div>
@@ -150,18 +150,109 @@
                             </ul>
                         </div>
                         <div class="price-footer">
-                            <a href="/thiet-ke-web-ban-hang-chuyen-nghiep-p901" class="price-battn">Đặt hàng <i class="fa fa-angle-right"></i></a>
-                            <a href="/thiet-ke-web-ban-hang-chuyen-nghiep-p901" class="price-battn">Xem thêm <i class="fa fa-angle-right"></i></a>
+                            <a href="javascript:Cart.addProduct(901,'5700000','/assets/images/webDs.PNG','Thiết kế web bán hàng chuyên nghiệp');" class="price-battn">Đặt hàng <i class="fa fa-angle-right"></i></a>
+                            <a href="/thiet-ke-web-ban-hang-chuyen-nghiep-p901" class="price-battn">Chi tiết <i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div id="table2" class="tab-ct"></div>
+            <div id="table2" class="tab-ct">
+                <div class="col-xs-12 col-sm-4 xs-bottom-40">
+                    <div class="single-price">
+                        <div class="price-header">
+                            <img src="/assets/images/dev.jpg" alt="price">
+                            <div class="price-plan">
+                                <div class="price-title">
+                                    <h3>Nội dung</h3>
+                                    <div class="price-rate">
+                                        <h3>1.000.000 đ/ tháng</h3>
+                                    </div>
+                                </div>
+                              
+                            </div>
+                        </div>
+                        <div class="price-body">
+                            <ul>
+                                <li>Đăng bài, dàn trang, tối ưu từ khóa</li>
+                                <li>Đăng sản phẩm khách hàng yêu cầu</li>
+                                <li>Quản lý Facebook, đăng bài Facebook</li>
+                                <li>Nội dung khách hàng cấp ảnh và miêu tả qua Email</li>
+                            </ul>
+                        </div>
+                        <div class="price-footer">
+                            <a href="javascript:Cart.addProduct(886,'1000000','http://media.anpero.com/images/36/122017/mien-dong2017121121322774.jpg','Miến dong | Ngon lành');" class="price-battn">Đặt hàng <i class="fa fa-angle-right"></i></a>
+                            <a href="#" class="price-battn">Chi tiết <i class="fa fa-angle-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-4 xs-bottom-40">
+                    <div class="single-price">
+                        <div class="price-header">
+                            <img src="/assets/images/webDs.PNG" />
+                            <div class="price-plan">
+                                <div class="price-title">
+                                    <h3>Quản trị</h3>
+                                </div>
+                                <div class="price-rate">
+                                    <h3>3.000.000 đ/tháng</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="price-body">
+                            <ul>
+                                <li>Đăng bài viết, và tin tức lên web và Facebook</li>
+                                <li>Trả lời các liên hệ từ web, và mạng xã hội ( yêu cầu khách hàng cung cấp thông tin về sản phẩm, dịch vụ) </li>
+                                <li>Thông báo hoặc chốt đơn, cho chủ web khi có đơn hàng mới.</li>
+                                <li>Chỉnh sửa banner quảng cáo không giới hạn</li>
+                                <li>Báo cáo doanh thu theo từng chi nhánh, nhân viên bán hàng qua email, hoặc tài liệu</li>
+                                <li>Báo cáo các sản phẩm bán chạy nhất qua email, hoặc tài liệu</li>
+                                <li>Báo cáo các nguyền khách hàng, tỷ lệ khách hàng tới web ( từ tìm kiếm, tự nhiên, hay nguồn nào dẫn tới web)</li>
+                              
+                            </ul>
+                        </div>
+                        <div class="price-footer">
+                            <a href="#" class="price-battn">Đặt hàng <i class="fa fa-angle-right"></i></a>
+                            <a href="#" class="price-battn">Chi tiết <i class="fa fa-angle-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-4">
+                    <div class="single-price">
+                        <div class="price-header">
+                            <img src="/assets/images/webDs.PNG" />
+                            <div class="price-plan">
+                                <div class="price-title">
+                                    <h3>Tăng doanh số</h3>
+                                </div>
+                                <div class="price-rate">
+                                    <h3>Cần phân tích </h3>
+                                    
+                                </div>
+                            </div>
+                        </div>
+                        <div class="price-body">
+                            <ul>
+                                <li>Cài đặt mã tiếp thị lại Google</li>
+                                <li>Cài đặt mã tiếp thị lại Facebook</li>
+                                <li>Lên kế hoạch tối ưu hóa từ khóa</li>
+                                <li>Quảng cáo trên Fan Pace</li>
+                                <li>Quảng cáo tìm kiếm Google</li>
+                                <li>Quảng cáo tiếp thị lại</li>
+                            </ul>
+                        </div>
+                        <div class="price-footer">
+                            <a href="/thiet-ke-web-ban-hang-chuyen-nghiep-p901" class="price-battn">Đặt hàng <i class="fa fa-angle-right"></i></a>
+                            <a href="/thiet-ke-web-ban-hang-chuyen-nghiep-p901" class="price-battn">Chi tiết <i class="fa fa-angle-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
             <div id="table3" class="tab-ct"></div>
         </div>
     </div>
 </section>
-<div class="container section-relative">
+<div class="container section-relative ">
     <div class="row">
         @*@Html.Partial("product/_MenuAndAdsPartial")*@
         <div class="col-md-12">
