--- a/06_Shop_Onepage/Views/Shared/_Layout.cshtml
+++ b/06_Shop_Onepage/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                 <div class="row">
                     <div class="text-center col-xs-12 col-sm-8 col-sm-offset-2">
                         <div class="page-title">
-                            <h2>Thông tin</h2>
+                            <h2>Thông tin Anpero</h2>
                         </div>
                     </div>
                 </div>
@@ -75,7 +75,6 @@
                                 <ul>
                                     <li>Thứ 2 đén thứ 6<span>: 6.00 am - 10.00 pm</span></li>
                                     <li>Thứ 7 - ngày lễ<span>: 8.00 am - 6.00 pm</span></li>
-
                                     <li>Chủ nhật<span>: Chỉ trực kỹ thuật</span></li>
                                 </ul>
                             </div>
@@ -140,6 +139,8 @@
 
     @RenderSection("scripts", required: false)
     <script src="/assets/js/main.js"></script>
+    <script src="/Scripts/jquery.cokie.min.js"></script>
+    <script src="/Scripts/ShoppingCart.js"></script>
     @Html.Raw(commonInfo.PageScript)
     <script>
         (function (d, s, id) {
