--- a/06_Shop_Onepage/Views/Product/Index.cshtml
+++ b/06_Shop_Onepage/Views/Product/Index.cshtml
@@ -1,14 +1,14 @@
 ﻿@if (ViewData["prDetail"] != null)
 {
     AnperoFrontend.WebService.ProductItem item = (AnperoFrontend.WebService.ProductItem)ViewData["prDetail"];
-    <div class="page-top">
+    <div class="page-top section-padding">
         <div class="container">
             <!-- breadcrumb -->
             <div class="breadcrumb clearfix">
                 <a class="home" href="/" title="Return to Home">Home</a>
-                <span class="navigation-pipe">&nbsp;</span>
+                <span class="fa fa-caret-right">&nbsp;</span>
                 <a href="/" title="Return to Home">@item.ParentCatName</a>
-                <span class="navigation-pipe">&nbsp;</span>
+                <span class="fa fa-caret-right">&nbsp;</span>
                 <a href="/" title="Return to Home">@item.CatName</a>
             </div>
             <!-- ./breadcrumb -->            
