--- a/06_Shop_Onepage/Views/Article/Index.cshtml
+++ b/06_Shop_Onepage/Views/Article/Index.cshtml
@@ -6,7 +6,7 @@
         item = (BlogItem)ViewData["blogdeltail"];
     }
 }
-<section class="photography-area padding-top" id="philosophy">
+<section class="photography-area section-padding" id="philosophy">
     <div class="container">
         <div class="row">
             <div class="text-center col-xs-12 col-sm-8 col-sm-offset-2">
