--- a/06_Shop_Onepage/Views/Article/Category.cshtml
+++ b/06_Shop_Onepage/Views/Article/Category.cshtml
@@ -2,13 +2,12 @@
 @{
     SearchArticleResults articleList = (SearchArticleResults)ViewData["ArticleList"];
 }
-  
-<div class="columns-container">
-    <div class="container" id="columns">
+
+    <div class="container section-padding" id="columns">
         <!-- breadcrumb -->
         <div class="breadcrumb clearfix">
             <a class="home" href="#" title="Return to Home">Home</a>
-            <span class="navigation-pipe">&nbsp;</span>
+            <span class="fa fa-caret-right">&nbsp;</span>
             <span class="navigation_page">Blog</span>
         </div>
         <!-- ./breadcrumb -->
@@ -189,5 +188,5 @@
         </div>
         <!-- ./row-->
     </div>
-</div>
+
 
