--- a/11_Company_Info/Views/Shared/product/_productDetail.cshtml
+++ b/11_Company_Info/Views/Shared/product/_productDetail.cshtml
@@ -7,7 +7,7 @@
     <div id="product">
         <div class="primary-box row ">
             <div class="pb-right-column col-xs-12 col-sm-12">
-                <h1 class="product-name page-heading">@item.PrName</h1>
+                <h1 class="product-name">@item.PrName</h1>
                 <div class="form-action">                  
 
                     <div class="button-group">
@@ -15,7 +15,6 @@
                             <i class="fa fa-facebook-official"></i>
                             <br>Chia sẻ
                         </a>
-
                         <a class="compare" href="//plus.google.com/share?url=@thisUrl">
                             <i class="fa fa-google-plus"></i>
                             <br>
