--- a/04_Shop_multiProduct/Views/Shared/product/_productDetail.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/product/_productDetail.cshtml
@@ -114,17 +114,18 @@
                     <li class="active">
                         <a aria-expanded="false" data-toggle="tab" href="#product-detail">Thông tin chi tiết</a>
                     </li>
+                    <li>
+                        <a aria-expanded="false" data-toggle="tab" id="paymentTab" href="#paymentDetail">Thông tin thanh toán</a>
+                    </li>
                 </ul>
                 <div class="tab-container">
                     <div id="product-detail" class="tab-panel active">
                         @Html.Raw(item.Detail)
                     </div>
+                    <div id="paymentDetail"></div>
                 </div>
             </div>
         }
-
-        <!-- ./tab product -->
-        <!-- box product -->
         <div class="page-product-box">
             <h3 class="heading">Sản phẩm liên quan</h3>
             <ul class="product-list">
@@ -184,9 +185,24 @@
 
             </ul>
         </div>
-        <!-- ./box product -->
-
     </div>
-    <!-- Product -->
 </div>
+    
+}
+@section scripts {
+<script>
+    $(document).ready(function () {
+        $("#paymentTab").click(function () {
+            $.ajax({
+                type: "post",
+                url: "/home/PolicyAjax",
+                data: { type: 6 },
+                success: function (rs) {
+                    $("#paymentDetail").html(rs);
+                }
+            });
+        });
+    });
+</script>
+
 }
