update css theme 04

--- a/04_Shop_multiProduct/Views/Product/Index.cshtml
+++ b/04_Shop_multiProduct/Views/Product/Index.cshtml
@@ -64,8 +64,19 @@
                     });
                 });
             }
-
+            $(document).ready(function () {
+                $("#paymentTab").click(function () {
+                    
+                    $.ajax({
+                        type: "post",
+                        url: "/home/PolicyAjax",
+                        data: { type: 6 },
+                        success: function (rs) {
+                            $("#paymentDetail").html(rs);
+                        }
+                    });
+                });
+            });
         </script>
-
     }
 }
