--- a/04_Shop_multiProduct/Views/Shared/product/_productDetail.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/product/_productDetail.cshtml
@@ -115,14 +115,18 @@
                         <a aria-expanded="false" data-toggle="tab" href="#product-detail">Thông tin chi tiết</a>
                     </li>
                     <li>
-                        <a aria-expanded="false" data-toggle="tab" id="paymentTab" href="#paymentDetail">Thông tin thanh toán</a>
+                        <a aria-expanded="false" data-toggle="tab" href="#paymentDetail"   id="paymentTab">Thông tin thanh toán</a>
                     </li>
                 </ul>
                 <div class="tab-container">
                     <div id="product-detail" class="tab-panel active">
                         @Html.Raw(item.Detail)
                     </div>
-                    <div id="paymentDetail"></div>
+                    <div id="paymentDetail">
+                        <div id='ajax_loader' style="left: 45%; top: 50%;">
+                            <img src="http://media.anpero.com/images/38/102017/loading2017102517124312.gif" />
+                        </div>        
+                    </div>
                 </div>
             </div>
         }
@@ -188,21 +192,4 @@
     </div>
 </div>
     
-}
-@section scripts {
-<script>
-    $(document).ready(function () {
-        $("#paymentTab").click(function () {
-            $.ajax({
-                type: "post",
-                url: "/home/PolicyAjax",
-                data: { type: 6 },
-                success: function (rs) {
-                    $("#paymentDetail").html(rs);
-                }
-            });
-        });
-    });
-</script>
-
 }
