--- a/04_Shop_multiProduct/assets/css/style.css
+++ b/04_Shop_multiProduct/assets/css/style.css
@@ -3907,6 +3907,7 @@ span.notify-right{
   overflow: hidden;
   z-index: 100;
   position: relative;
+  margin-bottom:0px;
 }
 .product-tab .nav-tab>li{
   height: 50px;
