--- a/06_Shop_Onepage/Views/Shared/_partial/_MainMenu.cshtml
+++ b/06_Shop_Onepage/Views/Shared/_partial/_MainMenu.cshtml
@@ -33,7 +33,7 @@
                         {
                             <a href="skype:@commonInfo.Skype?call"><i class="fa fa-skype"></i></a>
                         }
-                        <a title="Chia sẻ trên google+" target="_blank" href="https://plus.google.com/share?url=@HttpContext.Current.Request.RawUrl"><i class="fa fa-google-plus"></i></a>
+                        <a title="Chia sẻ trên google+" target="_blank" href="https://plus.google.com/share?url=@System.Web.HttpContext.Current.Request.Url.ToString()"><i class="fa fa-google-plus"></i></a>
                     </div>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                                     <li class="adm"><a href="#contact">Đăng nhập quản trị</a></li>
                                     <li><a href="#about">Về chúng tôi</a></li>
                                     <li><a href="#philosophy">Công nghệ</a></li>                                    
-                                    <li><a href="#blog">Hướng dẫn</a></li>
+                                    <li><a href="/huong-dan-su-dung-b115">Hướng dẫn</a></li>
                                     <li><a href="#images">Hình Ảnh</a></li>
                                     <li><a href="/thiet-ke-web-c167" title="thiết kế web">Thiết kế web</a></li>
                                     <li><a href="#contact">Liên hệ</a></li>
