--- a/04_Shop_multiProduct/assets/css/style.css
+++ b/04_Shop_multiProduct/assets/css/style.css
@@ -5173,7 +5173,7 @@ span.notify-right{
     padding-bottom: 10px;
     line-height: 25px;
 }
-.adrct i{line-height:25px!important;}
+.adrct i{line-height:25px!important;margin-right:10px;}
 .tabs-list li{
     margin: 0;
     position: relative;
