--- a/08_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/08_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -200,7 +200,7 @@
                     </div>
                     <div class="slider-items-products">
                         <div id="brand-slider" class="product-flexslider hidden-buttons">
-                            <div class="slider-items slider-width-col6">
+                            <div class="slider-items slider-width-col6" content-type="slide5">
                                 @if (ViewData["slide5"] != null)
                                 {
                                     Ads[] slide = (Ads[])ViewData["slide5"];
@@ -224,7 +224,7 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 testimonials-section">
                     <div class="offer-slider parallax parallax-2">
-                        <ul class="bxslider">
+                        <ul class="bxslider" content-type="slide6">
                             
                             @if (ViewData["slide6"] != null)
                             {
