--- a/04_Shop_multiProduct/assets/css/option6.css
+++ b/04_Shop_multiProduct/assets/css/option6.css
@@ -197,7 +197,7 @@
 	/*background: rgba(43, 23, 13, 0.8);*/
 	color: #fff;
 	display: inline-block;
-	min-width: 480px;
+	min-width: 520px;
     background-image: url(http://media.anpero.com/images/27/12018/22018012313045580.jpg);
 }
 .option6 .main-header .header-search-box .keyword{
@@ -1101,6 +1101,7 @@
 	margin-top: 30px;
 	overflow: hidden;
 }
+.logo img{height:200px;}
 .option6 .band-logo a{
 	float: left;
 	background: #eee;
