update shopping cart
update shopping cart

--- a/04_Shop_multiProduct/Views/API/Index.cshtml
+++ b/04_Shop_multiProduct/Views/API/Index.cshtml
@@ -2,13 +2,12 @@
 @{
     ViewBag.Title = "Thông tin thanh toán";
 }
-<div>@ViewBag.Msg</div>
 <div class="page-heading">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-title bl-title">
-                    <h2>Cảm ơn quý khách đã thanh toán</h2>
+                    <h2>Cảm ơn quý khách đã tin tưởng</h2>
                 </div>
             </div>
         </div>
