--- a/08_Shop_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/08_Shop_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -19,7 +19,7 @@
                 <li>
                     <div class="feature-box need-help">
                         <div class="icon-support"></div>
-                        <div class="content">Điện thoại Tư vấn 0906.006.580</div>
+                        <div class="content">Điện thoại Tư vấn @commonInfo.HotLine</div>
                     </div>
                 </li>
                 <li>
@@ -189,15 +189,10 @@
         <div class="footer-bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-12 col-xs-12 coppyright">© 2016 Ngonlanh. All Rights Reserved. Power by Anpero</div>
-
+                    <div class="col-sm-12 col-xs-12 coppyright">© 2016 @commonInfo.Name. All Rights Reserved. <a href="http://anpero.com" theme="08">Power by Anpero</a></div>
                 </div>
-                <!--row-->
             </div>
-            <!--container-->
-        </div>
-        <!--footer-bottom-->
-        <!-- BEGIN SIMPLE FOOTER -->
+        </div>        
     </footer>
 </div>
 
