--- a/08_Shop_MultiProduct/assets/stylesheet/style.css
+++ b/08_Shop_MultiProduct/assets/stylesheet/style.css
@@ -148,7 +148,7 @@ header {
     padding-right: 25px;
     padding-left: 20px;
     margin-top: -41px;
-    background: #88be4c;
+    background: #26293259;
     height: 116px;
     margin-right: 15px;
 }
