--- a/08_Shop_MultiProduct/Views/Article/Category.cshtml
+++ b/08_Shop_MultiProduct/Views/Article/Category.cshtml
@@ -21,7 +21,7 @@
     <link rel="canonical" href="@ViewBag.WebsiteUrl" />
 }
 <div class="page-heading">
-    <div class="container">
+    <div class="container">s
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-title">
