--- a/04_Shop_multiProduct/Views/API/Index.cshtml
+++ b/04_Shop_multiProduct/Views/API/Index.cshtml
@@ -2,12 +2,13 @@
 @{
     ViewBag.Title = "Thông tin thanh toán";
 }
-<div class="page-heading">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <div class="page-title bl-title">
-                    <h2>Cảm ơn quý khách đã tin tưởng</h2>
+
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="page-title bl-title">
+                <div class="page-heading">
+                    <h2 class="page-heading-title">Cảm ơn quý khách đã tin tưởng</h2>
                 </div>
             </div>
         </div>
@@ -17,7 +18,7 @@
     <div class="main container">
         <div class="row">
             <div class="center_column col-xs-12 col-sm-12" id="center_column">
-                <div id="main" class="blog-wrapper">                    
+                <div id="main" class="blog-wrapper">
                     <div>@Html.Raw(ViewBag.Msg)</div>
                 </div>
             </div>
