--- a/06_Shop_Onepage/Views/Shared/_Layout.cshtml
+++ b/06_Shop_Onepage/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>@ViewBag.Title</title>
+    <link rel="shortcut icon" href="@commonInfo.Logo" type="image/x-icon">
     <meta property="og:locale" content="vi_VN" />
     <meta property="og:type" content="website" />
     <meta name="distribution" content="Global" />
@@ -130,10 +131,7 @@
             </div>
         </div>
     </footer>
-    <!--=== JQUERY LIBRARY ====-->
     @Scripts.Render("~/bundles/script")
-   
-    
   
     @Html.Raw(commonInfo.AnperoPlugin)
 
