--- a/08_Shop_MultiProduct/Views/Article/Category.cshtml
+++ b/08_Shop_MultiProduct/Views/Article/Category.cshtml
@@ -21,18 +21,15 @@
     <link rel="canonical" href="@ViewBag.WebsiteUrl" />
 }
 <div class="page-heading">
-    <div class="container">s
+    <div class="container">
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-title">
                     <h2>Tin Tức | Cập nhật</h2>
                 </div>
             </div>
-            <!--col-xs-12-->
         </div>
-        <!--row-->
     </div>
-    <!--container-->
 </div>
 
 <div class="main-container col2-right-layout">
