--- a/08_Shop_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/08_Shop_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -7,7 +7,7 @@
     }
 }
 <div id="page">
-    <div class="our-features-box wow bounceInUp animated animated">
+    @*<div class="our-features-box wow bounceInUp animated animated">
         <div class="container">
             <ul>
                 <li>
@@ -36,11 +36,11 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </div>*@
     <footer>
         <!-- BEGIN INFORMATIVE FOOTER -->
         <div class="footer-inner">
-            <div class="newsletter-row">
+            @*<div class="newsletter-row">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col">
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <!--footer-column-last-->
-            </div>
+            </div>*@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4 col-xs-12 col-lg-4">
@@ -189,7 +189,7 @@
         <div class="footer-bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-12 col-xs-12 coppyright">© 2016 @commonInfo.Name. All Rights Reserved. <a href="http://anpero.com" theme="08">Power by Anpero</a></div>
+                    <div class="col-sm-12 col-xs-12 coppyright">© 2016 @commonInfo.Name. All Rights Reserved. <a href="http://anpero.com" theme="08" title="Thiet ke web">Power by Anpero</a></div>
                 </div>
             </div>
         </div>        
