--- a/09_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/09_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <!-- Apple iOS and Android stuff - don't remove! -->
     <link rel="icon" href="#" type="image/x-icon">
-    <link rel="shortcut icon" href="#" type="image/x-icon">
+    <link rel="shortcut icon" href="@commonInfo.Logo" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="/assets/stylesheet/jquery.bxslider.css">
     <link rel="stylesheet" type="text/css" href="/assets/stylesheet/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="/assets/stylesheet/style.css" media="all">
